# tflite_research

./: README.md
base_minimal_cmake/: baseline
cpu_gpu_memcpy_test/: CMakeLists.txt  minimal.cc
cpu_gpu_zerocopy_test/: minimal.cc
cpufirst_gpu_zerocopy_test/: cpu_gpu  minimal.cc
gpu_cpu_memcpy_test/: minimal.cc  without_zerocopy
layer_cpu_test/: CMakeLists.txt  minimal.cc
layer_gpu_test/: CMakeLists.txt  about  minimal.cc
